--- a/package.json
+++ b/package.json
@@ -2,12 +2,18 @@
   "name": "jstest",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "build": "tailwindcss --input app.css --output app.build.css"
+  },
   "devDependencies": {
     "@types/bun": "latest",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prettier-plugin-twig-enhancements": "https://github.com/jorismak/prettier-plugin-twig-enhancements",
-    "prettier-plugin-twig-melody": "https://github.com/jorismak/prettier-plugin-twig-melody"
+    "prettier-plugin-twig-melody": "https://github.com/jorismak/prettier-plugin-twig-melody",
+    "tailwindcss": "^3.4.1"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
