--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"cs-fix": "prettier -w ."
   },
   "devDependencies": {
+    "@shopify/prettier-plugin-liquid": "^1.4.1",
     "@types/bun": "latest",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
